# Notify-Hub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  PROJECT_GUIDE.md  README.md  pyproject.toml  start-dev.cmd
.codex/skills/notify-hub-plugin-development/: SKILL.md
.github/workflows/: ci.yml  release.yml
assets/brand/: README.md
backend/: alembic.ini
backend/app/: __init__.py  config.py  main.py  py.typed  version.py
backend/app/ai/: __init__.py  policy.py  provider.py  schemas.py  service.py
backend/app/api/: admin_auth.py  admin_core.py  admin_management.py  ai.py  client_reminders.py  dependencies.py  errors.py  events.py  health.py  media.py  plugins.py  reminders.py  schemas.py  wecom_callback.py  wecom_mobile.py
backend/app/application/: ai_control_service.py  ai_profile_references.py  audit.py  conversation_service.py  event_service.py  media_service.py  mobile_identity_service.py  (+16 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_admin_contracts.py  test_ai_control_plane.py  test_ai_gateway.py  test_conversation_parser.py  test_core_api.py  test_delivery_worker.py  test_docker_build_contract.py  test_media_cleanup_worker.py  test_media_security.py  test_plugin_runtime.py  test_public_media.py  test_public_media_urls.py  test_release_script.py  test_reminder_access.py  test_reminder_center_mvp.py  test_reminder_draft_service.py  test_reminder_integration.py  test_reminder_reliability.py  test_reminder_schedules.py  test_reminders_domain.py  test_security_and_wecom.py  test_speech_service.py  test_version_check.py  test_wecom_callback_crypto.py  test_wecom_media_adapter.py  test_wecom_mobile.py
deploy/: Dockerfile  docker-compose.release-smoke.yml  docker-compose.yml  entrypoint.sh
docs/: 01-architecture.md  02-domain-model.md  03-plugin-development.md  04-api-contracts.md  05-wecom-integration.md  06-development-roadmap.md  07-security-and-reliability.md  08-deployment-and-operations.md  10-testing-strategy.md  11-interactive-continuous-reminders.md  12-v0.3.0-release-contract.md  13-ai-gateway.md  14-reminder-center-development-plan.md  15-reminder-operations.md  DECISIONS.md  operations.md  project-log.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  styles.css  types.ts
frontend/tests/: AIProfilesView.test.ts  AIProvidersView.test.ts  InteractiveReminderPreview.test.ts  PluginAiDecisionFields.test.ts  PluginConfigDrawer.test.ts  PluginsView.test.ts  SettingsView.test.ts  StatusBadge.test.ts  api.test.ts  formModels.test.ts  mobileApi.test.ts  setup.ts
plugins/: __init__.py
plugins/builtin/: __init__.py
scripts/: check_version.py  release.py  send_test_news.py  set_cover_url.py  set_plugin_config.py  set_plugin_secret.py  start-dev.ps1  test_fabrizio_matcher.py  test_fabrizio_scrape.py  test_fetch_tweets.py  test_matcher.py
(+168 files in other folders)
